remove light grey bg on section above events list

--- a/asap-custom-styles.css
+++ b/asap-custom-styles.css
@@ -465,7 +465,7 @@ div.c-nav-centered__search > div {
 
 /* Event list styling */
 
-.event-list-container {
+.event-list-container:not(.moved-up) {
   background-color: var(--light-gray);    
   padding: 20px;
   margin: 60px auto;
