--- a/asap-custom-styles.css
+++ b/asap-custom-styles.css
@@ -72,6 +72,7 @@ h6 {
   text-transform: uppercase;
   display: flex;
   align-items: center;
+  margin-bottom: 1rem;
 }
 
 h6::before {
@@ -587,6 +588,7 @@ blockquote {
   margin: 40px 0;
 }
 .secondary-call-out {
+  padding: 80px 0;;
   width: 100vw;
   margin-left: calc(50% - 50vw);
   margin-right: calc(50% - 50vw);
