--- a/asap-custom-styles.css
+++ b/asap-custom-styles.css
@@ -758,7 +758,7 @@ label {
 
   /* secondary */
   > .dropdown-menu > li {
-    &:hover a {
+    &:hover > a {
       color: var(--white-color) !important;
     }
     > a {
