--- a/asap-custom-styles.css
+++ b/asap-custom-styles.css
@@ -779,7 +779,7 @@ label {
 /* Media query for desktop */
 @media (min-width: 768px) {
   .grid-container {
-    grid-template-columns: repeat(var(--grid-cols-desktop, 3), 1fr);
+    grid-template-columns: repeat(var(--grid-cols-desktop), 1fr);
   }
 }
 
@@ -813,6 +813,57 @@ label {
   --grid-cols-mobile: 2;
   --grid-cols-desktop: 6;
 }
+
+/* Desktop layout */
+    @media (min-width: 768px) {
+      .grid-container {
+        grid-template-columns: repeat(var(--grid-cols-desktop), 1fr);
+      }
+    }
+
+    /* Column span classes for desktop */
+    @media (min-width: 768px) {
+      /* For 3-column layouts */
+      .cols-1-3 .span-2 {
+        grid-column: span 2;
+      }
+      .cols-1-3 .span-3, .cols-1-3 .span-full {
+        grid-column: span 3;
+      }
+      
+      /* For 4-column layouts */
+      .cols-2-4 .span-2 {
+        grid-column: span 2;
+      }
+      .cols-2-4 .span-3 {
+        grid-column: span 3;
+      }
+      .cols-2-4 .span-4, .cols-2-4 .span-full {
+        grid-column: span 4;
+      }
+      
+      /* For 6-column layouts */
+      .cols-2-6 .span-2 {
+        grid-column: span 2;
+      }
+      .cols-2-6 .span-3 {
+        grid-column: span 3;
+      }
+      .cols-2-6 .span-4 {
+        grid-column: span 4;
+      }
+      .cols-2-6 .span-5 {
+        grid-column: span 5;
+      }
+      .cols-2-6 .span-6, .cols-2-6 .span-full {
+        grid-column: span 6;
+      }
+    }
+
+    /* Column span classes for mobile */
+    .cols-2-3 .span-2-mobile, .cols-2-4 .span-2-mobile, .cols-2-6 .span-2-mobile {
+      grid-column: span 2;
+    }
 
 /* Grid item styles */
 .grid-item {
