--- a/asap-custom-styles.css
+++ b/asap-custom-styles.css
@@ -658,7 +658,7 @@ h1 novi-content-wrapper {
   margin-right: 35%;
 }
 
-.header-ribbon h2 {
+.header-ribbon h2.subtitle {
   margin: 100px 0; /* Keep your vertical spacing */
   max-width: 1110px;
   margin-left: auto !important;
@@ -671,7 +671,7 @@ h1 novi-content-wrapper {
   z-index: 2;
 }
 
-h2 novi-content-wrapper {
+h2.subtitle novi-content-wrapper {
   margin-right: 35% !important;
 }
 
@@ -687,7 +687,7 @@ h2 novi-content-wrapper {
     font-size: 2.5em !important; /* Smaller font for mobile */
   }
 
-    .header-ribbon h2 {
+    .header-ribbon h2.subtitle {
     max-width: 100% !important;
     margin: 50px 0; /* Reduced vertical spacing for mobile */
     font-size: 1.0em !important; /* Smaller font for mobile */
