--- a/asap-custom-styles.css
+++ b/asap-custom-styles.css
@@ -203,7 +203,6 @@ div.c-nav-centered__search > div {
 }
 
 /* Footer Styling */
-/* TODO: weight on links */
 .c-footer {
   background-color: var(--primary-color);
   padding-top: 64px;
@@ -352,9 +351,11 @@ div.c-nav-centered__search > div {
   border: 2px solid var(--dark-blue);
 }
 
-.body-content .main-event .event-info .btn.btn.btn-transparent,
+.body-content .main-event .event-info .btn.btn-transparent,
 .btn.btn-transparent,
-.btn.btn-secondary {
+.btn.btn-secondary,
+.btn-default, 
+.btn-secondary {
   padding: 15px 30px;
   border-radius: 8px;
   background-color: var(--background-color);
