--- a/asap-custom-styles.css
+++ b/asap-custom-styles.css
@@ -748,7 +748,7 @@ h2.subtitle novi-content-wrapper {
   border-style: none;
 }
 
-.form-control:not(.search-text):not(#search-box):not(#Category) {
+.form-control:not(.search-text):not(#search-box):not(#Category):not(#eventSearchInput) {
   border-radius: 4px;
   border: solid 1px var(--input-border) !important;
   padding: 20px;
@@ -1412,7 +1412,7 @@ tbody tr:hover {
     }
 
     a {
-      color: var(--primary-color);
+      color: var(--primary-color) !important;
     }
   }
 
@@ -1435,4 +1435,26 @@ tbody tr:hover {
       color: var(--dark-blue);
     }
   }
+
+    
+  .c-member-compass-well {
+    .batch-actions {
+      .novicon {
+        color: var(--dark-blue);
+      }
+      .btn {
+        padding: 15px 30px;
+        border-radius: 8px;
+        background-color: var(--background-color);
+        color: var(--secondary-color);
+        border: none;
+        font-size: 16px;
+      }
+    }
+
+    .listing-table .actions-bar__sort {
+      position: relative;
+    }
+  }
+
 }
