--- a/asap-custom-styles.css
+++ b/asap-custom-styles.css
@@ -379,15 +379,16 @@ div.c-nav-centered__search > div {
 .btn-secondary {
   padding: 15px 30px;
   border-radius: 8px;
-  background-color: var(--background-color);
-  color: var(--secondary-color);
+  background-color: var(--background-color) !important;
+  color: var(--secondary-color) !important;
   border: none;
-  font-size: 16px;
+  font-size: 16px !important;
 }
 
 .body-content .main-event .event-info .btn.btn.btn-transparent:hover,
 .btn.btn-transparent:hover,
-.btn.btn-secondary:hover {
+.btn.btn-secondary:hover,
+.btn-secondary:hover {
   background-color: var(--secondary-color) !important;
   color: var(--white-color) !important;
 }
