H1 color on homepage carousel

--- a/asap-custom-styles.css
+++ b/asap-custom-styles.css
@@ -648,6 +648,10 @@ blockquote {
 
 
 /* hero */
+.slick-slide[data-slick-index="0"] .overlay .container .event-info h1 {
+  color: var(--white-color) !important;
+}
+
 .header-ribbon {
   background-color: var(--primary-color);
   text-align: left;
