--- a/asap-custom-styles.css
+++ b/asap-custom-styles.css
@@ -829,6 +829,10 @@ label {
   }
 }
 
+.c-nav-navigation__collapse a:focus {
+  outline: none;
+}
+
 @media all and (max-width: 768px) {
   /* mobile menus colors */
   .navbar-nav {
@@ -1226,6 +1230,10 @@ ol {
       bottom: 4rem;
       border-radius: 8px;
       justify-content: flex-end;
+
+      h1 {
+        color: var(--white-color) !important;
+      }
 
       .date {
         font-size: 16px;
