--- a/asap-custom-styles.css
+++ b/asap-custom-styles.css
@@ -1633,9 +1633,10 @@ tbody tr:hover {
       transform: translateY(-50%);
       width: 50px;
       height: 50px;
-      background: #EFF6F5;
+      background: transparent;
       color: white;
       border-radius: 50%;
+      border: solid 1px #FF6C27;
       text-align: center;
       line-height: 50px;
       font-size: 24px;
@@ -1650,7 +1651,7 @@ tbody tr:hover {
       background: #FF6C27;
     }
 
-.arrow:hover .arrow-icon {
+.arrow .arrow-icon {
   color: white !important;
   display: block;
 }
@@ -1679,7 +1680,7 @@ tbody tr:hover {
       display: none;
     }
     
-        #slide1:checked ~ .slides #slide1-content,
+    #slide1:checked ~ .slides #slide1-content,
     #slide2:checked ~ .slides #slide2-content,
     #slide3:checked ~ .slides #slide3-content {
       display: block;
@@ -1695,7 +1696,7 @@ tbody tr:hover {
       display: inline-block;
       width: 15px;
       height: 15px;
-      background: #EFF6F5;
+      background: #fff;
       border-radius: 50%;
       margin: 0 5px;
       cursor: pointer;
