--- a/asap-custom-styles.css
+++ b/asap-custom-styles.css
@@ -1047,6 +1047,20 @@ label {
   border-radius: 8px;
 }
 
+.grid-item:has(.button-container) {
+  position: relative;
+  padding-bottom: 100px; /* Space for the button */
+}
+
+.button-container {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  text-align: center;
+  margin-bottom: 15px;
+}
+
 /* Background color variants - container level */
 .bg-white > .grid-item:not([class*="bg-"]) {
   --item-bg: #fff;
